fix misaligned text in record indicator on Chrome (by @ikbensiep)

--- a/src/css/components/record-indicator.scss
+++ b/src/css/components/record-indicator.scss
@@ -16,6 +16,7 @@
   width: .8em;
   height: .8em;
   background-color: #ff625e;
+  line-height: 1.1em;
   border-radius: 50%;
   right: 2.5ex;
   top: 2ex;
@@ -23,7 +24,7 @@
   opacity: 1;
   transform: rotateX(0) scale(1.3);
   transition: all .5s, transform .2s .1s;
-  }
+}
 
 .video-js .vjs-control.vjs-record-indicator:before {
   content: "REC";
@@ -38,7 +39,7 @@
   font-size: 0.8em;
   opacity: 1;
   transition: opacity .5s .2s;
-  }
+}
 
 .video-js .vjs-control.vjs-record-indicator:after {
   content: "";
@@ -54,7 +55,8 @@
   animation-name: pulse;
   animation-duration: 2s;
   animation-iteration-count: infinite;
-  animation-delay: .25s; }
+  animation-delay: .25s;
+}
 
 @keyframes pulsetext {
   from {
@@ -66,7 +68,8 @@
   75% {
     opacity: .5; }
   to {
-    opacity: .75; } }
+    opacity: .75; }
+}
 
 @keyframes pulse {
   from {
@@ -77,4 +80,5 @@
     transform: scale(2.5); }
   to {
     opacity: 0;
-    transform: scale(3.5); } }
+    transform: scale(3.5); }
+}
